# Res-Infer

./: .gitignore  CMakeLists.txt  README.md  clear.sh  make_dir.sh  requirements.txt  run.sh  set.sh  to_tex.py
data/: compute_gt.py  convert-to-tex.py  data_split.py  distribution_plot.py  finger.py  ivf.py  learn-proj.py  linear.py  opq.py  pca.py  randomized.py  result_plot.py  utils.py  visual.py
include/: adsampling.h  finger.h  linear.h  linearmodel.h  matrix.h  pca.h  pq.h  utils.h
include/hnswlib/: hnswalg.h  hnswlib.h  space_l2.h
include/ivf/: ivf.h
script/: analysis_hnsw_linear.sh  analysis_hnsw_opq.sh  analysis_hnsw_prune_rate.sh  index_hnsw.sh  index_ivf.sh  index_opq.sh  index_pca.sh  linear.sh  linear_hnsw.sh  linear_ivf.sh  local_test_ivf_rerank.sh  pre_compute.sh  search_hnsw.sh  search_hnsw_avx.sh  search_hnsw_avx512.sh  search_hnsw_finger.sh  search_hnsw_opq.sh  search_hnsw_pca.sh  search_ivf.sh  search_ivf_avx.sh  search_ivf_avx512.sh  search_ivf_opq.sh  search_ivf_pca.sh
src/: CMakeLists.txt  analysis_hnsw_opq.cpp  analysis_hnsw_pca.cpp  binery_search_parameter.cpp  index_hnsw.cpp  logger_hnsw_opq.cpp  logger_hnsw_pca.cpp  logger_ivf.cpp  logger_ivf_opq.cpp  logger_ivf_pca.cpp  search_hnsw.cpp  search_hnsw_opq.cpp  search_hnsw_pca.cpp  search_ivf.cpp  search_ivf_opq.cpp  search_ivf_pca.cpp  test_learned_inference.cpp  test_pca.cpp  test_pq.cpp  test_seperate_log.cpp
